# kexsh

./: CLAUDE.md  Cargo.toml
src/: config.rs  credential.rs  error.rs  main.rs
src/cloud/: login.rs
src/ipc/: client.rs  codec.rs  mod.rs  mux.rs
src/server/: daemon.rs  mod.rs  pid.rs
src/terminal/: attach.rs  manager.rs  pty.rs
src/view/: manager.rs
tests/contract/: proxy_test.rs  terminal_test.rs
