[package]
name = "kexsh"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "io-std", "signal", "fs", "sync", "time"] }
nix = { version = "0.31", features = ["term", "signal", "process", "ioctl", "user", "fs"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
portable-pty = "0.9"
libc = "0.2"
crossterm = { version = "0.29", features = ["event-stream"] }
vt100 = "0.16"
futures-lite = "2"
toml = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
open = "5"
hostname = "0.4"
machine-uid = "0.5"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
jsonschema = "0.28"
httpmock = "0.8"
base64 = "0.22"
